useEffect 与 useLayoutEffect 的区别

--- a/src/pages/UseLayoutEffectDemo/说明.md
+++ b/src/pages/UseLayoutEffectDemo/说明.md
@@ -11,8 +11,9 @@
 - 使用效果：useEffect是按照顺序执行代码的，改变屏幕像素之后执行（先渲染，后改变DOM），当改变屏幕内容时可能会产生闪烁；useLayoutEffect是改变屏幕像素之前就执行了（会推迟页面显示的事件，先改变DOM后渲染），不会产生闪烁。useLayoutEffect总是比useEffect先执行。
 
 
+::: 主要注意 tip
 >在未来的趋势上，两个 API 是会长期共存的，暂时没有删减合并的计划，需要开发者根据场景去自行选择。React 团队的建议非常实用，如果实在分不清，先用 useEffect，一般问题不大；如果页面有异常，再直接替换为 useLayoutEffect 即可。
-
+:::
 
 # 代码解释
 
