React Hooks在平时开发中需要注意的问题和原因补充1

--- a/src/pages/ReactHooksError/说明.md
+++ b/src/pages/ReactHooksError/说明.md
@@ -106,7 +106,8 @@ const addItem = (item) => {
 ```
 
 ##  为什么在 Class 组件中不会有这个问题
-在 Class 组件中，状态管理是通过 this.state 和 this.setState 进行的，以下是几点原因：
+
+### 在 Class 组件中，状态管理是通过 this.state 和 this.setState 进行的，以下是几点原因：
 
 - 状态合并：在 Class 组件中，setState 方法会合并新状态和旧状态。当你调用 this.setState({ array: newArray }) 时，React 会理解你是更新状态，并且它内部会处理如何更新 DOM。这意味着即使你在更新状态时直接操作数组，React 仍然可以正确识别状态变化（但这不是推荐的做法）。
 
