--- a/src/pages/ReactHooksError/说明.md
+++ b/src/pages/ReactHooksError/说明.md
@@ -65,6 +65,34 @@ class Indicatorfilter extends React.Component<any,any>{
 }
 ```
 
+3. useState设置状态的时候，只有第一次生效，后期需要更新状态，必须通过useEffect
+TableDeail是一个公共组件，在调用它的父组件里面，我们通过set改变columns的值，以为传递给TableDeail 的 columns是最新的值，所以tabColumn每次也是最新的值，但是实际tabColumn是最开始的值，不会随着columns的更新而更新：
+
+```javascript
+const TableDeail = ({
+    columns,
+}:TableData) => {
+    const [tabColumn, setTabColumn] = useState(columns) 
+}
+
+// 正确的做法是通过useEffect改变这个值
+const TableDeail = ({
+    columns,
+}:TableData) => {
+    const [tabColumn, setTabColumn] = useState(columns) 
+    useEffect(() =>{setTabColumn(columns)},[columns])
+}
+
+```
+
+4. 善用useCallback
+父组件传递给子组件事件句柄时，如果我们没有任何参数变动可能会选用useMemo。但是每一次父组件渲染子组件即使没变化也会跟着渲染一次。 
+
+5. 不要滥用useContext
+可以使用基于 useContext 封装的状态管理工具。
+
+
+-----------------------------------
 
 # GPT解释
 
