--- a/src/pages/IntersectionObserverDemo/说明文档.md
+++ b/src/pages/IntersectionObserverDemo/说明文档.md
@@ -1,1 +1,131 @@
 # IntersectionObserver讲解
+
+> IntersectionObserver 是浏览器提供的一种API，用于检测一个元素是否进入了浏览器的视口（或另一个元素的可视区域）。与传统的滚动事件监听器相比，它可以更加高效地执行操作，因为它是异步执行的，并且不会频繁触发。
+
+## 基本概念与用法
+
+IntersectionObserver 的主要作用是检测一个目标元素的可见性。当目标元素进入或离开视口时，它会触发回调函数。这在实现懒加载、无限滚动、元素动画等场景中非常有用。
+
+### 1. 创建 IntersectionObserver 实例
+
+要使用 IntersectionObserver，首先需要创建一个实例，并为其传入一个回调函数，该函数会在检测到目标元素的可见性变化时执行。
+
+```javascript
+const observer = new IntersectionObserver(callback, options);
+```
+
+- callback: 当观察的目标元素进入或离开视口时触发的回调函数。
+- options: 配置选项，用于调整 IntersectionObserver 的行为。
+
+### 2. 回调函数
+
+回调函数会在每次目标元素进入或离开视口时触发，它接收两个参数：
+
+- entries: 一个数组，包含了每个被观察的目标元素的可见性变化信息。
+- observer: 当前的 IntersectionObserver 实例。
+
+回调函数中的 entries 参数包含了 IntersectionObserverEntry 对象，它提供了目标元素的相关信息，如是否可见、交叉率、边界框等。
+
+```javascript
+const callback = (entries, observer) => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      console.log('目标元素进入视口');
+    } else {
+      console.log('目标元素离开视口');
+    }
+  });
+};
+```
+
+### 3. 配置选项 (options)
+
+options 是一个可选的配置对象，包含以下属性：
+
+- root: 用于指定与哪个元素的可视区域进行比较，默认为浏览器的视口。
+- rootMargin: 用于扩展或缩小根元素的边界。它类似于 CSS 的 margin，可以接受像素值或百分比。
+- threshold: 一个数组，表示目标元素可见的比例达到多少时触发回调函数。可以是 0 到 1 之间的值。
+
+```javascript
+const options = {
+  root: null, // 默认为视口
+  rootMargin: '0px', // 不扩展或缩小边界
+  threshold: 0.1 // 元素可见度达到 10% 时触发
+};
+
+```
+
+4. 观察目标元素
+创建好 IntersectionObserver 实例后，可以通过 observe 方法来监听目标元素的可见性变化。
+```javascript
+const targetElement = document.querySelector('.target');
+observer.observe(targetElement);
+```
+
+5. 停止观察
+当不再需要观察目标元素时，可以使用 unobserve 方法停止观察，释放资源。
+
+```javascript
+observer.unobserve(targetElement);
+```
+
+6. 使用 disconnect 取消所有观察
+
+如果想停止观察所有目标元素，可以调用 disconnect 方法。
+
+```javascript
+observer.disconnect();
+```
+
+## 使用 IntersectionObserver 实现懒加载
+
+懒加载的核心在于，只有当元素进入视口时才加载资源，避免不必要的资源浪费。下面是一个基本的例子，展示如何使用 IntersectionObserver 实现图片的懒加载。
+
+```html
+<img data-src="example.jpg" class="lazy-load" alt="Lazy loaded image">
+```
+通过将图片的 src 属性暂时存储在 data-src 中，我们可以等图片进入视口后再进行加载：
+```javascript
+const images = document.querySelectorAll('.lazy-load');
+
+const lazyLoad = (entries, observer) => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      const img = entry.target;
+      img.src = img.dataset.src; // 图片进入视口后才设置src
+      observer.unobserve(img); // 加载后停止观察
+    }
+  });
+};
+
+const observer = new IntersectionObserver(lazyLoad, {
+  root: null,
+  threshold: 0.1,
+  rootMargin: '0px'
+});
+
+images.forEach(img => {
+  observer.observe(img);
+});
+
+```
+
+## 工作原理
+
+IntersectionObserver 通过不断监听目标元素与视口之间的交集变化，判断元素是否进入或离开可视区域，并根据设定的 threshold 来触发回调函数。它的执行是异步的，因此不会因为滚动事件频繁触发回调而影响页面性能。
+
+## 应用场景
+
+- 懒加载：只有在元素可见时加载资源，避免不必要的资源占用。
+- 无限滚动：当用户滚动页面到达某个区域时，自动加载新的内容。
+- 元素动画：当元素进入视口时，触发 CSS 动画效果。
+- 广告曝光：检测广告何时真正显示在用户的屏幕上，确保广告主支付的是有效展示。
+
+## 性能优势
+
+- 相比传统的监听滚动事件（scroll）来判断元素是否进入视口，IntersectionObserver 的计算是异步的，不会频繁触发回调，因此可以更高效地处理复杂页面的懒加载或其他滚动相关的功能。
+- 浏览器会优化 IntersectionObserver 的回调，使其不会在每次渲染时都被调用，减少不必要的重排和重绘，提升性能。
+
+## 总结
+
+IntersectionObserver 是处理懒加载、动画触发、广告曝光等场景的理想选择。它为开发者提供了一个方便、灵活且高效的方式来监控元素与视口的交集变化，避免了繁琐的滚动事件监听，同时提升了页面的整体性能。
